Changed a wrong CSS selector name

--- a/styles.css
+++ b/styles.css
@@ -178,7 +178,7 @@ h2 {
     margin-bottom: 1.6rem;
   }
 
-  .card__middle {
+  .card__price {
     margin-top: 2rem;
     margin-bottom: 2.4rem;
   }
